--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
   text-align: center;
-  background: linear-gradient(to right, #0000ff, #ff0000);
+  background: linear-gradient(to right, #FF5757, #3D3DFF);
 }
 h1 {
   font-size: 5em;
